--- a/Develop/style.css
+++ b/Develop/style.css
@@ -32,7 +32,7 @@ textarea {
 
 .row {
   white-space: pre-wrap;
-  height: 80px;
+  height: 8.3%;
   border-top: 1px solid black;
 }
 
@@ -43,18 +43,18 @@ textarea {
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color: #d47474;
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: #ffffff;
+  color: black;
 }
 
 .future {
-  background-color: #77dd77;
-  color: white;
+  background-color: #d2ffd2;
+  color: blue;
 }
 
 .saveBtn {
